ImplementacionAST/implementacion_tiny1/c_ast_descendente/ConstructorAST.java
/* ConstructorAST.java */
/* Generated By:JavaCC: Do not edit this line. ConstructorAST.java */
package c_ast_descendente;

import asint.TinyASint.ParamReales;
import asint.TinyASint.Else;
import asint.TinyASint.Exp;
import asint.TinyASint.Param;
import asint.TinyASint.ListaParam;
import asint.TinyASint.ListaCampos;
import asint.TinyASint.Dec;
import asint.TinyASint.SDec;
import asint.TinyASint.SInst;
import asint.TinyASint.OPDec;
import asint.TinyASint.Suma;
import asint.TinyASint.TipoVar;
import asint.TinyASint.TipoVar_array;
import asint.TinyASint.TipoVar_iden;
import asint.TinyASint.TipoVar_record;
import asint.TinyASint.Resta;
import asint.TinyASint.SDec_muchas;
import asint.TinyASint.SDec_una;
import asint.TinyASint.SInst_muchas;
import asint.TinyASint.SInst_una;
import asint.TinyASint.Mul;
import asint.TinyASint.Negativo;
import asint.TinyASint.NotOperation;
import asint.TinyASint.Nulo;
import asint.TinyASint.OPDec;
import asint.TinyASint.Div;
import asint.TinyASint.Else_muchos;
import asint.TinyASint.Entero;
import asint.TinyASint.Flecha;
import asint.TinyASint.IdenExp;
import asint.TinyASint.Igual_igual;
import asint.TinyASint.Inst;
import asint.TinyASint.ListaCampos_muchos;
import asint.TinyASint.ListaCampos_uno;
import asint.TinyASint.Lista_param_muchos;
import asint.TinyASint.Lista_param_uno;
import asint.TinyASint.LitExp;
import asint.TinyASint.Mayor_igual_que;
import asint.TinyASint.Mayor_que;
import asint.TinyASint.Menor_igual_que;
import asint.TinyASint.Menor_que;
import asint.TinyASint.Mod;
import asint.TinyASint.OrOperation;
import asint.TinyASint.ParamFormales;
import asint.TinyASint.ParamReales_muchos;
import asint.TinyASint.ParamReales_uno;
import asint.TinyASint.Param_amps;
import asint.TinyASint.Param_normal;
import asint.TinyASint.PointerAst;
import asint.TinyASint.Prog;
import asint.TinyASint.Punto;
import asint.TinyASint.AndOperation;
import asint.TinyASint.Array;
import asint.TinyASint.Bloque;
import asint.TinyASint.BooleanExp;
import asint.TinyASint.Campo;
import asint.TinyASint.Dec_proc;
import asint.TinyASint.Dec_type;
import asint.TinyASint.Dec_var;
import asint.TinyASint.Distinto_distinto;
import asint.TinyASint.Real;
import semops.SemOps;

public class ConstructorAST implements ConstructorASTConstants {
   private SemOps sem = new SemOps();

  final public Prog Ini() throws ParseException {Prog prog;
    prog = Programa();
    jj_consume_token(0);
{if ("" != null) return prog;}
    throw new Error("Missing return statement in function");
}

  final public Prog Programa() throws ParseException {OPDec sdec; SInst sinst;
    sdec = OPDec();
    sinst = SInst();
{if ("" != null) return sem.prog(sdec,sinst);}
    throw new Error("Missing return statement in function");
}

  final public OPDec OPDec() throws ParseException {SDec sdec;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case procedimiento:
    case var:
    case type:{
      sdec = SDec();
      jj_consume_token(43);
      jj_consume_token(43);
{if ("" != null) return sem.opdec(sdec);}
      break;
      }
    default:
      jj_la1[0] = jj_gen;
{if ("" != null) return null;}
    }
    throw new Error("Missing return statement in function");
}

  final public SDec SDec() throws ParseException {Dec dec; SDec resul;
    dec = Dec();
    resul = RSDec(sem.sdec_una(dec));
{if ("" != null) return resul;}
    throw new Error("Missing return statement in function");
}

  final public SDec RSDec(SDec decah) throws ParseException {SDec resul; Dec dec;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case procedimiento:
    case var:
    case type:{
      dec = Dec();
      resul = RSDec(sem.sdec_muchas(decah, dec));
{if ("" != null) return resul;}
      break;
      }
    default:
      jj_la1[1] = jj_gen;
{if ("" != null) return decah;}
    }
    throw new Error("Missing return statement in function");
}

  final public Dec Dec() throws ParseException {TipoVar tipo; Token t; ParamFormales param; Bloque bloq;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case var:{
      jj_consume_token(var);
      tipo = TipoVar();
      t = jj_consume_token(iden);
{if ("" != null) return sem.dec_var(tipo, sem.str(t.image, t.beginLine, t.beginColumn));}
      break;
      }
    case type:{
      jj_consume_token(type);
      tipo = TipoVar();
      t = jj_consume_token(iden);
{if ("" != null) return sem.dec_type(tipo,sem.str(t.image, t.beginLine, t.beginColumn) );}
      break;
      }
    case procedimiento:{
      jj_consume_token(procedimiento);
      t = jj_consume_token(iden);
      jj_consume_token(44);
      param = ParamFormales();
      jj_consume_token(45);
      jj_consume_token(46);
      bloq = Bloque();
      jj_consume_token(47);
{if ("" != null) return sem.dec_proc( sem.str(t.image, t.beginLine, t.beginColumn),param, bloq);}
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  final public TipoVar TipoVar() throws ParseException {Token t; TipoVar tipo; ListaCampos campos;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ent:{
      jj_consume_token(ent);
{if ("" != null) return sem.tipoVar("int");}
      break;
      }
    case real:{
      jj_consume_token(real);
{if ("" != null) return sem.tipoVar("real");}
      break;
      }
    case bool:{
      jj_consume_token(bool);
{if ("" != null) return sem.tipoVar("bool");}
      break;
      }
    case string:{
      jj_consume_token(string);
{if ("" != null) return sem.tipoVar("string");}
      break;
      }
    case iden:{
      t = jj_consume_token(iden);
{if ("" != null) return sem.tipoVar_iden(sem.str(t.image, t.beginLine, t.beginColumn));}
      break;
      }
    case pointer:{
      jj_consume_token(pointer);
      tipo = TipoVar();
{if ("" != null) return  sem.tipoVar_pointer(tipo);}
      break;
      }
    case array:{
      jj_consume_token(array);
      jj_consume_token(48);
      t = jj_consume_token(numeroEntero);
      jj_consume_token(49);
      jj_consume_token(of);
      tipo = TipoVar();
{if ("" != null) return sem.tipoVar_array( sem.str(t.image, t.beginLine, t.beginColumn), tipo);}
      break;
      }
    case record:{
      jj_consume_token(record);
      jj_consume_token(46);
      campos = ListaCampos();
      jj_consume_token(47);
{if ("" != null) return sem.tipoVar_record(campos);}
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  final public ListaCampos ListaCampos() throws ParseException {Campo campo; ListaCampos resul;
    campo = Campo();
    resul = RListaCampos(sem.listaCampos_uno(campo));
{if ("" != null) return resul;}
    throw new Error("Missing return statement in function");
}

  final public ListaCampos RListaCampos(ListaCampos rlistacampoah0) throws ParseException {Campo campo; ListaCampos resul;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 50:{
      jj_consume_token(50);
      campo = Campo();
      resul = RListaCampos(sem.listaCampos_muchos(rlistacampoah0,campo));
{if ("" != null) return resul;}
      break;
      }
    default:
      jj_la1[4] = jj_gen;
{if ("" != null) return rlistacampoah0;}
    }
    throw new Error("Missing return statement in function");
}

  final public Campo Campo() throws ParseException {Token t; TipoVar tipo;
    tipo = TipoVar();
    t = jj_consume_token(iden);
{if ("" != null) return sem.campo(tipo,sem.str(t.image, t.beginLine, t.beginColumn));}
    throw new Error("Missing return statement in function");
}

  final public ParamFormales ParamFormales() throws ParseException {ListaParam lista;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ent:
    case real:
    case bool:
    case string:
    case record:
    case array:
    case pointer:
    case iden:{
      lista = ListaParam();
{if ("" != null) return sem.param_formales(lista);}
      break;
      }
    default:
      jj_la1[5] = jj_gen;
{if ("" != null) return null;}
    }
    throw new Error("Missing return statement in function");
}

  final public ListaParam ListaParam() throws ParseException {Param paramah; ListaParam resul;
    paramah = Param();
    resul = RListaParam(sem.lista_param_uno(paramah));
{if ("" != null) return resul;}
    throw new Error("Missing return statement in function");
}

  final public ListaParam RListaParam(ListaParam paramah0) throws ParseException {ListaParam resul;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 51:{
      jj_consume_token(51);
      resul = RListaParam(sem.lista_param_muchos(paramah0,Param()));
{if ("" != null) return resul;}
      break;
      }
    default:
      jj_la1[6] = jj_gen;
{if ("" != null) return paramah0;}
    }
    throw new Error("Missing return statement in function");
}

  final public Param Param() throws ParseException {TipoVar rparamah; Param resul;
    rparamah = TipoVar();
    resul = RParam(rparamah);
{if ("" != null) return resul;}
    throw new Error("Missing return statement in function");
}

  final public Param RParam(TipoVar rparamah) throws ParseException {Token t;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 43:{
      jj_consume_token(43);
      t = jj_consume_token(iden);
{if ("" != null) return sem.param_amps(rparamah,sem.str(t.image, t.beginLine, t.beginColumn));}
      break;
      }
    case iden:{
      t = jj_consume_token(iden);
{if ("" != null) return sem.param_normal(rparamah,sem.str(t.image, t.beginLine, t.beginColumn));}
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  final public Bloque Bloque() throws ParseException {Prog resultado;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case True:
    case False:
    case and:
    case or:
    case not:
    case Null:
    case procedimiento:
    case If:
    case While:
    case call:
    case New:
    case delete:
    case read:
    case write:
    case nl:
    case var:
    case type:
    case lit_cadena:
    case numeroEntero:
    case numeroReal:
    case iden:
    case 44:
    case 46:
    case 52:
    case 53:
    case 54:
    case 55:
    case 56:
    case 57:
    case 58:
    case 59:
    case 60:
    case 61:
    case 62:
    case 63:{
      resultado = Programa();
{if ("" != null) return sem.bloque(resultado);}
      break;
      }
    default:
      jj_la1[8] = jj_gen;
{if ("" != null) return null;}
    }
    throw new Error("Missing return statement in function");
}

  final public SInst SInst() throws ParseException {Inst inst; SInst resultado;
    inst = Inst();
    resultado = RInst(sem.sinst_uno(inst));
{if ("" != null) return resultado;}
    throw new Error("Missing return statement in function");
}

  final public SInst RInst(SInst rinstH) throws ParseException {Inst inst; SInst rinst;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 50:{
      jj_consume_token(50);
      inst = Inst();
      rinst = RInst(sem.sinst_muchos(rinstH, inst));
{if ("" != null) return rinst;}
      break;
      }
    default:
      jj_la1[9] = jj_gen;
{if ("" != null) return null;}
    }
    throw new Error("Missing return statement in function");
}

  final public Inst Inst() throws ParseException {Exp exp0, exp01, exp02; SInst sinst; Else elsee; ParamReales paramReales; Token t; Bloque bloque;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case True:
    case False:
    case and:
    case or:
    case not:
    case Null:
    case lit_cadena:
    case numeroEntero:
    case numeroReal:
    case iden:
    case 44:
    case 52:
    case 53:
    case 54:
    case 55:
    case 56:
    case 57:
    case 58:
    case 59:
    case 60:
    case 61:
    case 62:
    case 63:{
      exp01 = E0();
      jj_consume_token(52);
      exp02 = E0();
{if ("" != null) return sem.inst_asig(exp01, exp02);}
      break;
      }
    case If:{
      jj_consume_token(If);
      exp0 = E0();
      jj_consume_token(Then);
      sinst = SInst();
      elsee = Else();
      jj_consume_token(endif);
{if ("" != null) return sem.inst_if(exp0, sinst, elsee);}
      break;
      }
    case While:{
      jj_consume_token(While);
      exp0 = E0();
      jj_consume_token(Do);
      sinst = SInst();
      jj_consume_token(endwhile);
{if ("" != null) return sem.inst_while(exp0, sinst);}
      break;
      }
    case read:{
      jj_consume_token(read);
      exp0 = E0();
{if ("" != null) return sem.inst_read(exp0);}
      break;
      }
    case write:{
      jj_consume_token(write);
      exp0 = E0();
{if ("" != null) return sem.inst_write(exp0);}
      break;
      }
    case nl:{
      jj_consume_token(nl);
{if ("" != null) return sem.inst_nl("nl");}
      break;
      }
    case New:{
      jj_consume_token(New);
      exp0 = E0();
{if ("" != null) return sem.inst_new(exp0);}
      break;
      }
    case delete:{
      jj_consume_token(delete);
      exp0 = E0();
{if ("" != null) return sem.inst_delete(exp0);}
      break;
      }
    case call:{
      jj_consume_token(call);
      t = jj_consume_token(iden);
      jj_consume_token(44);
      paramReales = ParamReales();
      jj_consume_token(45);
{if ("" != null) return sem.inst_call(sem.str(t.image, t.beginLine, t.beginColumn), paramReales);}
      break;
      }
    case 46:{
      jj_consume_token(46);
      bloque = Bloque();
      jj_consume_token(47);
{if ("" != null) return sem.inst_bloque(bloque);}
      break;
      }
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  final public Else Else() throws ParseException {SInst sinst;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case Else:{
      jj_consume_token(Else);
      sinst = SInst();
{if ("" != null) return sem.else_muchos(sinst);}
      break;
      }
    default:
      jj_la1[11] = jj_gen;
{if ("" != null) return null;}
    }
    throw new Error("Missing return statement in function");
}

  final public ParamReales ParamReales() throws ParseException {ParamReales resultado; Exp exp0;
    exp0 = E0();
    resultado = RParamReales(sem.param_reales_uno(exp0));
{if ("" != null) return resultado;}
    throw new Error("Missing return statement in function");
}

  final public ParamReales RParamReales(ParamReales rpaH) throws ParseException {Exp exp0; ParamReales resultado;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 51:{
      jj_consume_token(51);
      exp0 = E0();
      resultado = RParamReales(sem.param_reales_muchos(rpaH, exp0));
{if ("" != null) return resultado;}
      break;
      }
    default:
      jj_la1[12] = jj_gen;

{if ("" != null) return rpaH;}
    }
    throw new Error("Missing return statement in function");
}

  final public Exp E0() throws ParseException {Exp exp1, resultado;
    exp1 = E1();
    resultado = RE0(exp1);
{if ("" != null) return resultado;}
    throw new Error("Missing return statement in function");
}

  final public Exp RE0(Exp expH) throws ParseException {Exp exp0; Exp exp1; String operation;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 53:{
      jj_consume_token(53);
      exp0 = E0();
{if ("" != null) return sem.suma(expH, exp0);}
      break;
      }
    case 54:{
      jj_consume_token(54);
      exp1 = E1();
{if ("" != null) return sem.resta(expH, exp1);}
      break;
      }
    default:
      jj_la1[13] = jj_gen;
{if ("" != null) return expH;}
    }
    throw new Error("Missing return statement in function");
}

  final public Exp E1() throws ParseException {Exp exp2, resultado;
    exp2 = E2();
    resultado = RE1(exp2);
{if ("" != null) return resultado;}
    throw new Error("Missing return statement in function");
}

  final public Exp RE1(Exp expH) throws ParseException {String operation; Exp exp2, resultado;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case and:
    case or:{
      operation = OP1AI();
      exp2 = E2();
      resultado = RE1(sem.exp(operation, expH, exp2));
{if ("" != null) return resultado;}
      break;
      }
    default:
      jj_la1[14] = jj_gen;
{if ("" != null) return expH;}
    }
    throw new Error("Missing return statement in function");
}

  final public Exp E2() throws ParseException {Exp exp3, resultado;
    exp3 = E3();
    resultado = RE2(exp3);
{if ("" != null) return resultado;}
    throw new Error("Missing return statement in function");
}

  final public Exp RE2(Exp expH) throws ParseException {String operation; Exp exp3, resultado;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 56:
    case 57:
    case 58:
    case 59:
    case 60:
    case 61:{
      operation = OP2AI();
      exp3 = E3();
      resultado = RE2(sem.exp(operation, expH, exp3));
{if ("" != null) return resultado;}
      break;
      }
    default:
      jj_la1[15] = jj_gen;
{if ("" != null) return expH;}
    }
    throw new Error("Missing return statement in function");
}

  final public Exp E3() throws ParseException {Exp exp4, resultado;
    exp4 = E4();
    resultado = RE3(exp4);
{if ("" != null) return resultado;}
    throw new Error("Missing return statement in function");
}

  final public Exp RE3(Exp expH) throws ParseException {String operation; Exp exp4;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 55:
    case 62:
    case 63:{
      operation = OP3NA();
      exp4 = E4();
{if ("" != null) return sem.exp(operation, expH, exp4);}
      break;
      }
    default:
      jj_la1[16] = jj_gen;
{if ("" != null) return expH;}
    }
    throw new Error("Missing return statement in function");
}

  final public Exp E4() throws ParseException {Exp exp4, exp5;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 54:{
      jj_consume_token(54);
      exp5 = E5();
{if ("" != null) return sem.negativoOperation(exp5);}
      break;
      }
    case not:{
      jj_consume_token(not);
      exp4 = E4();
{if ("" != null) return sem.notOperation(exp4) ;}
      break;
      }
    default:
      jj_la1[17] = jj_gen;
      exp5 = E5();
{if ("" != null) return exp5;}
    }
    throw new Error("Missing return statement in function");
}
